--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>hello world</h1>
-    <p>hello world</p>
-    <p>hello world</p>
-    <p>hello world</p>
-    <p>hello world</p>
+    <h1>Hello world</h1>
+    <p>Hello world</p>
+    <p>Hello world</p>
+    <p>Hello world</p>
+    <p>Hello world</p>
   </body>
 </html>
 l
